fixed query for tunnelname